# cpp_large_data_analysis

./: CMakeLists.txt  compile_commands.json
.cache/clangd/index/: data_driven_configuration.cpp.E70C6D9A3EFD3B2E.idx  data_driven_configuration.h.99431250EED07D5F.idx  directory_paths.h.5EAE8D594410B4E4.idx  main.cpp.861B9EF614C9957C.idx  main_window.cpp.4D668B9D7750D9DD.idx  main_window.h.42E91E643EB4A6D5.idx  main_window.test.cpp.6434221E6926CA99.idx  main_window_test_helpers.cpp.DD06C724464EFE83.idx
cmake/fetch-content-modules/: Qt6.cmake  fetch-content-modules.cmake
data_analysis_app/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/config/: CMakeLists.txt  config.cpp  config.h  directory_paths.cpp.in  directory_paths.h
src/gui/: CMakeLists.txt  data_driven_configuration.cpp  data_driven_configuration.h  main_window.cpp  main_window.h
tests/: CMakeLists.txt
tests/gui/: CMakeLists.txt  main_window.test.cpp
